--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "customer": "nodemon src/customer.js",
+    "products": "nodemon src/products.js",
+    "start": "concurrently --kill-others \"npm run customer\" \"npm run products\""
   },
   "author": "",
   "license": "ISC",
