--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "uuid": "^10.0.0"
   },
